--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/uuid": "^9.0.7",
     "axios": "^1.6.2",
     "json-server": "^0.17.4",
     "react": "^18.2.0",
